Git Tests/force-app/main/default/default/objects/Case/fields/StatusResponsibleArea__c.field-meta.xml
<CustomField>
    <fullName>StatusResponsibleArea__c</fullName>
    <label>Status Área Demandante</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Razao__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Agendamento</fullName>
            </value>
            <value>
                <fullName>Aguardando liberação de NCC</fullName>
            </value>
            <value>
                <fullName>Aguardando outro Setor</fullName>
            </value>
            <value>
                <fullName>Aguardando Retorno da Mercadoria</fullName>
            </value>
            <value>
                <fullName>Alteração de modal</fullName>
            </value>
            <value>
                <fullName>Aprovação da exceção</fullName>
            </value>
            <value>
                <fullName>Atraso aéreo</fullName>
            </value>
            <value>
                <fullName>Atraso da liberação no aeroporto</fullName>
            </value>
            <value>
                <fullName>Atraso expedição</fullName>
            </value>
            <value>
                <fullName>Atraso feriado</fullName>
            </value>
            <value>
                <fullName>Atraso liberação sefaz</fullName>
            </value>
            <value>
                <fullName>Atraso transportador</fullName>
            </value>
            <value>
                <fullName>Avaria</fullName>
            </value>
            <value>
                <fullName>Baixa de canhoto errada</fullName>
            </value>
            <value>
                <fullName>Boleto com Desconto (anexar o documento)</fullName>
            </value>
            <value>
                <fullName>Bonificação</fullName>
            </value>
            <value>
                <fullName>Bonificação autorizada</fullName>
            </value>
            <value>
                <fullName>Bonificação não autorizada</fullName>
            </value>
            <value>
                <fullName>Carta de Comprometimento de Troca</fullName>
            </value>
            <value>
                <fullName>Carta de troca</fullName>
            </value>
            <value>
                <fullName>Cliente ausente</fullName>
            </value>
            <value>
                <fullName>Coleta pela transportadora</fullName>
            </value>
            <value>
                <fullName>Conferência da divergência do ítem</fullName>
            </value>
            <value>
                <fullName>Corrigir Custo</fullName>
            </value>
            <value>
                <fullName>Corte de carga (aéreo)</fullName>
            </value>
            <value>
                <fullName>Cotação</fullName>
            </value>
            <value>
                <fullName>Desistência do cliente</fullName>
            </value>
            <value>
                <fullName>Divergência no pedido de compra</fullName>
            </value>
            <value>
                <fullName>Duplicidade do pedido</fullName>
            </value>
            <value>
                <fullName>Em análise - Cadastro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>