Git Tests/force-app/main/default/default/objects/Case/fields/Submit_to_approval__c.field-meta.xml
<CustomField>
    <fullName>Submit_to_approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether or not a case should be approved</description>
    <label>Submit to approval</label>
    <type>Checkbox</type>
</CustomField>