Git Tests/force-app/main/default/default/objects/Case/fields/Submotivo__c.field-meta.xml
<CustomField>
    <fullName>Submotivo__c</fullName>
    <label>Submotivo</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Motivo__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Alterar data de entrega</fullName>
            </value>
            <value>
                <fullName>Alterar endereço de entrega</fullName>
            </value>
            <value>
                <fullName>Alvará Vencido</fullName>
            </value>
            <value>
                <fullName>Arrependimento de Compra</fullName>
            </value>
            <value>
                <fullName>Atendimento ao Cliente</fullName>
            </value>
            <value>
                <fullName>Atraso na rota de entrega</fullName>
            </value>
            <value>
                <fullName>Atraso na separação</fullName>
            </value>
            <value>
                <fullName>Avaria</fullName>
            </value>
            <value>
                <fullName>Bloqueado por crédito</fullName>
            </value>
            <value>
                <fullName>Cadastro Desatualizado</fullName>
            </value>
            <value>
                <fullName>Cadastro do Cliente</fullName>
            </value>
            <value>
                <fullName>Cadastro do Produto</fullName>
            </value>
            <value>
                <fullName>Cliente Não Aceita Lotes Variados</fullName>
            </value>
            <value>
                <fullName>Cliente Não Usa a Marca</fullName>
            </value>
            <value>
                <fullName>CNPJ Divergente do Cotado</fullName>
            </value>
            <value>
                <fullName>Código de Barra Incorreto</fullName>
            </value>
            <value>
                <fullName>Conversão / Unidade de Medida</fullName>
            </value>
            <value>
                <fullName>Cotação Errada</fullName>
            </value>
            <value>
                <fullName>Dados de Qualidade</fullName>
            </value>
            <value>
                <fullName>Descrição Incorreta</fullName>
            </value>
            <value>
                <fullName>Desvio de Qualidade</fullName>
            </value>
            <value>
                <fullName>EAN/REGISTRO ANVISA</fullName>
            </value>
            <value>
                <fullName>Erro de Estoque</fullName>
            </value>
            <value>
                <fullName>Erro Integração de Sistemas</fullName>
            </value>
            <value>
                <fullName>Erro na Separação</fullName>
            </value>
            <value>
                <fullName>Erro no cadastro do produto</fullName>
            </value>
            <value>
                <fullName>Erro VDE</fullName>
            </value>
            <value>
                <fullName>Erro VDI</fullName>
            </value>
            <value>
                <fullName>Extravio de Mercadoria</fullName>
            </value>
            <value>
                <fullName>Fabricante</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>