Git Tests/force-app/main/default/default/objects/Case/fields/TipoDeDevolucao__c.field-meta.xml
<CustomField>
    <fullName>TipoDeDevolucao__c</fullName>
    <label>Tipo de Devolução</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Razao__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Devolução Parcial</fullName>
            </value>
            <value>
                <fullName>Devolução Total</fullName>
            </value>
            <value>
                <fullName>Não Aplicável</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>