Git Tests/force-app/main/default/default/objects/Case/fields/TipoDeTransporte__c.field-meta.xml
<CustomField>
    <fullName>TipoDeTransporte__c</fullName>
    <label>Tipo de Transporte</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Razao__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Não Aplicável</fullName>
            </value>
            <value>
                <fullName>Próprio</fullName>
            </value>
            <value>
                <fullName>Terceiro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>