Git Tests/force-app/main/default/default/objects/Case/fields/ToAddress__c.field-meta.xml
<CustomField>
    <fullName>ToAddress__c</fullName>
    <label>To Address</label>
    <type>Email</type>
</CustomField>