Git Tests/force-app/main/default/default/objects/Case/fields/UltimaModificacao__c.field-meta.xml
<CustomField>
    <fullName>UltimaModificacao__c</fullName>
    <formula>NOW()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ultima Modificação</label>
    <type>DateTime</type>
</CustomField>