Git Tests/force-app/main/default/default/objects/Case/fields/ValorDaNotaFiscal__c.field-meta.xml
<CustomField>
    <fullName>ValorDaNotaFiscal__c</fullName>
    <inlineHelpText>Informar o valor da Nota Fiscal vinculada ao Caso aberto contra uma empresa do Grupo, que não esteja &quot;dentro do Nexos&quot;</inlineHelpText>
    <label>Valor da Nota Fiscal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>