Git Tests/force-app/main/default/default/objects/Case/fields/ValorDoDesconto__c.field-meta.xml
<CustomField>
    <fullName>ValorDoDesconto__c</fullName>
    <description>Campo usado para informar o valor do desconto, quando o Motivo do Caso for &quot;Solicitação de Desconto no Boleto&quot;</description>
    <inlineHelpText>Informe aqui o valor do desconto pretendido pelo Cliente.</inlineHelpText>
    <label>Valor do Desconto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>