Git Tests/force-app/main/default/default/objects/Case/fields/ValorDoFreteIda__c.field-meta.xml
<CustomField>
    <fullName>ValorDoFreteIda__c</fullName>
    <label>Valor do Frete - IDA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>