Git Tests/force-app/main/default/default/objects/Case/fields/ValorDoFreteVolta__c.field-meta.xml
<CustomField>
    <fullName>ValorDoFreteVolta__c</fullName>
    <label>Valor do Frete - VOLTA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>