Git Tests/force-app/main/default/default/objects/Case/recordTypes/AtendimentoAoCliente.recordType-meta.xml
<RecordType>
    <fullName>AtendimentoAoCliente</fullName>
    <active>true</active>
    <businessProcess>Atendimento ao Cliente</businessProcess>
    <description>Tipo de Registro dedicado ao time de Atendimento ao Cliente</description>
    <label>Atendimento ao Cliente</label>
</RecordType>