Git Tests/force-app/main/default/default/objects/Case/recordTypes/AtendimentoAoClienteComercial.recordType-meta.xml
<RecordType>
    <fullName>AtendimentoAoClienteComercial</fullName>
    <active>true</active>
    <businessProcess>Atendimento ao Cliente</businessProcess>
    <description>Tipo de Registro dedicado para os usuários que não façam parte do time de Atendimento ao Cliente.</description>
    <label>Atendimento ao Cliente - Comercial</label>
</RecordType>