Git Tests/force-app/main/default/default/objects/Case/validationRules/BloqueiaEdicaoNotaParaCasosDentroDoNexo.validationRule-meta.xml
<ValidationRule>
    <fullName>BloqueiaEdicaoNotaParaCasosDentroDoNexo</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 !Fora_do_Nexos__c,
OR( 
ISCHANGED(Emissor_do_Pedido__c),
ISCHANGED(Numero_do_Pedido__c),
ISCHANGED(Numero_da_Nota_Fiscal__c),
ISCHANGED(NotaFiscalEmpresaFilial__c)
),
NOT(ISCHANGED( BypassValidationRules__c )))</errorConditionFormula>
    <errorMessage>OS CAMPOS DESSA SEÇÃO SÓ PODEM SER EDITADOS MANUALMENTE, QUANDO O CASO É &quot;FORA DO NEXOS&quot; - DO CONTRÁRIO PEDIMOS QUE INDIQUE A RESPECTIVA NF NO CAMPO “NOTA FISCAL”, PARA AUTO PREENCHIMENTO DESSES CAMPOS.</errorMessage>
</ValidationRule>