Git Tests/force-app/main/default/default/objects/Case/validationRules/BloqueiaStatusEncerradoManualmente.validationRule-meta.xml
<ValidationRule>
    <fullName>BloqueiaStatusEncerradoManualmente</fullName>
    <active>true</active>
    <description>Para ignorar esta regra, o update deve ser feito com o campo BypassValidationRules__c = true.</description>
    <errorConditionFormula>AND(
BypassValidationRules__c == false,
ISCHANGED(BypassValidationRules__c) == false,
ISCHANGED(Status),
ISPICKVAL(Status, &quot;Closed&quot;) 
)</errorConditionFormula>
    <errorMessage>O CASO DEVE SER ENCERRADO ATRAVÉS DO BOTÃO &quot;ENCERRAR&quot;.</errorMessage>
</ValidationRule>