Git Tests/force-app/main/default/default/objects/Case/validationRules/ImpossibilidadeDeEdicao.validationRule-meta.xml
<ValidationRule>
    <fullName>ImpossibilidadeDeEdicao</fullName>
    <active>true</active>
    <description>Regra criada visando impedir edições em um caso que se encontra com o Status igual a ENCERRADO.</description>
    <errorConditionFormula>AND(OR(ISPICKVAL(PRIORVALUE(Status), &quot;Closed&quot;),ISPICKVAL(Status, &quot;Closed&quot;)), !$Permission.ReopenCase, NOT(ISCHANGED( BypassValidationRules__c )) )</errorConditionFormula>
    <errorMessage>VOCÊ NÃO PODE EDITAR UM CASO JÁ ENCERRADO</errorMessage>
</ValidationRule>