Git Tests/force-app/main/default/default/objects/Case/validationRules/ObrigaInformarCamposAreasResolvedoras.validationRule-meta.xml
<ValidationRule>
    <fullName>ObrigaInformarCamposAreasResolvedoras</fullName>
    <active>true</active>
    <description>Regra de validação que obriga os times das áreas resolvedoras, informarem valores nos campos &quot;Status Área Demandante&quot; e &quot;Análise do Caso&quot;</description>
    <errorConditionFormula>AND(ISPICKVAL(StatusResponsibleArea__c,&quot;&quot;),OR($Permission.ResolutionAreas,$Permission.ResolutionAreasRegulatorio))</errorConditionFormula>
    <errorDisplayField>StatusResponsibleArea__c</errorDisplayField>
    <errorMessage>FAVOR VERIFICAR O CAMPO &quot;STATUS ÁREA DEMANDANTE&quot;</errorMessage>
</ValidationRule>