Git Tests/force-app/main/default/default/objects/Case/validationRules/OnlyAllowedUsersCanCloseCase.validationRule-meta.xml
<ValidationRule>
    <fullName>OnlyAllowedUsersCanCloseCase</fullName>
    <active>true</active>
    <description>Only users with the custom permission CanCloseCase are allowed to close a Case</description>
    <errorConditionFormula>AND(!$Permission.CanCloseCase, ISCHANGED( Status ), ISPICKVAL(Status, &quot;ClosedWon&quot;))</errorConditionFormula>
    <errorMessage>VOCÊ NÃO TEM PERMISSÃO PARA FECHAR O CASO</errorMessage>
</ValidationRule>