Git Tests/force-app/main/default/default/objects/Case/listViews/TorreDeControle_Case.listView-meta.xml
<ListView>
    <fullName>TorreDeControle_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>Torre de Controle</label>
    <queue>TorreDeControle</queue>
    <sharedTo>
        <group>AtendimentoAoClientePublicGroup</group>
        <group>TorreDeControlePublicGroup</group>
    </sharedTo>
</ListView>